Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4107

proxy.process.ssl.total_success_handshake_count_in has wrong record type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0
    • Metrics, SSL
    • None

    Description

      proxy.process.ssl.total_success_handshake_count_in is the only SSL metric registered in RecordsConfig.cc where it is incorrectly registered as a node metric, rather than a process metric.

      Attachments

        Issue Links

          Activity

            People

              jamespeach James Peach
              jamespeach James Peach
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: